Add example CLI project
Add an example CLI project to demonstrate how to export VBA code from an
excel workbook.
Fix dependencies in the main library to reference the correct library.

Issue #1.

--- a/CliExcelVbaSyncExample/CliExcelVbaSyncExample.csproj
+++ b/CliExcelVbaSyncExample/CliExcelVbaSyncExample.csproj
@@ -1,6 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>8.0</LangVersion>
@@ -9,6 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="ExcelDna.Interop" Version="14.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ExcelVbaSync\ExcelVbaSync.csproj" />
   </ItemGroup>
 
 </Project>
