Improve command processing in example CLI tool
Add dependency on the CommandLineParser library in the example CLI project
to allow better processing of command line arguments. Two options are now
supported: Import and export.

Issue #2

--- a/CliExcelVbaSyncExample/CliExcelVbaSyncExample.csproj
+++ b/CliExcelVbaSyncExample/CliExcelVbaSyncExample.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.7.82" />
     <PackageReference Include="ExcelDna.Interop" Version="14.0.1" />
   </ItemGroup>
 
