Target .NET 4.7.2 as well as .NET Core
Update the library project file to also target .NET 4.7.2 as well as .NET
Core.

--- a/ExcelVbaSync/ExcelVbaSync.csproj
+++ b/ExcelVbaSync/ExcelVbaSync.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;net472</TargetFrameworks>
     <Nullable>enable</Nullable>
     <LangVersion>8.0</LangVersion>
     <WarningsAsErrors>CS8600;CS8602;CS8603;CS8618</WarningsAsErrors>
@@ -13,7 +13,6 @@
     <RepositoryUrl>https://gitlab.com/hectorjsmith/csharp-excel-vba-sync</RepositoryUrl>
     <PackageTags>VBA</PackageTags>
     <PackageReleaseNotes></PackageReleaseNotes>
-
   </PropertyGroup>
 
   <ItemGroup>
