--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
 
 package:
   stage: build
-  image: mcr.microsoft.com/dotnet/sdk
+  image: mcr.microsoft.com/dotnet/sdk:6.0
   before_script:
   - apt-get update
   - apt-get install nuget build-essential -y
